# Database

./: CMakeLists.txt  README.md  client.cpp  client.html  generator.cpp  http_client.cpp  justParser.cpp  runners.txt  server.cpp
DB/: Generator.cpp  Generator.h  Makefile  Name.txt  Patronymic.txt  Runner.h  Surname.txt  city.txt  main  main.cpp
Parts/: CMakeLists.txt
Parts/DB/: CMakeLists.txt  DB.cpp  DB.h  Generator.cpp  Generator.h  Runner.h  city.txt
Parts/Parser/: AST.h  CMakeLists.txt  interpreter.cpp  interpreter.h  parser.y  scanner.h  scanner.l
Parts/Server/: CMakeLists.txt  newServer.cpp  newServer.hpp
